# adopet

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  dev.Dockerfile  docker-compose.yml  logging.yaml  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties  tox.ini
.github/workflows/: pre-commit.yml
adopet/: main.py
adopet/api/enums/: animal_species.py  size_enum.py  state_enum.py  status_enum.py  user_role_enum.py
adopet/api/exceptions/: schema_validation_errors.py
adopet/api/models/: animal_specie_model.py  base_model.py  city_model.py  pet_model.py  size_model.py  state_model.py  status_model.py  user_model.py
adopet/api/models/repositories/: base_repository.py  user_repository.py
adopet/api/schemas/v1/: token_schema.py  user_schema.py
adopet/api/v1/: api.py
adopet/api/v1/routes/user/: user_view.py
adopet/api/v1/utils/: auth.py
adopet/api/views/v1/: api.py
adopet/core/: config.py  deps.py  log_formatter.py
adopet/migrations/: README  env.py
adopet/migrations/versions/: 0cc3c0c325c5_city_state_specie_models.py  2023_04_24_0105-82d08229a244_state_and_city_model.py  2023_04_24_0109-a6eb7cef308a_animal_specie_model.py  2023_04_24_0112-9c0638fe4a61_size_model.py  2023_04_24_0115-ddfe58fc87eb_status_model.py  2023_04_24_0116-6627418e92a3_user_model.py  2023_04_24_0119-01fb7fa01d7c_pet_model.py  3b7446acc15f_fix_user_model.py  7a4fefcaf57a_pet_user_relationship.py  993e09fc1bff_size_and_status_models.py  ca1ec2606c6f_pet_model.py  fe94ee4c8f66_user_model.py
migrations/: env.py
migrations/versions/: 2023_04_26_2002-5c5afc62f994_state_model.py  2023_04_26_2007-85085d68e2e1_size_model.py  2023_04_26_2007-8580260f9df2_city_model.py  2023_04_26_2008-c97c583599cc_status_model.py  2023_04_26_2008-f1a711334da4_animal_specie_model.py  2023_04_26_2009-371250f020b2_user_model.py  2023_04_26_2010-80aeb6522db7_pet_model.py  2023_04_26_2012-bf687421e4d5_insert_enum_choices.py  2023_05_13_1553-c97058b92c33_user_role_constraint.py
scripts/: start-for-local-development.sh  start-tests.sh
tests/: conftest.py  pytest.ini  test.env
tests/conftests/: __init__.py  client_app_conftest.py  sqlalchemy_mocks_conftest.py  token_schema_conftest.py  user_conftest.py
tests/support/: utils.py
tests/unit/core/: test_config.py
tests/unit/core/test_deps/: test_get_session.py
(+11 files in other folders)
