[tool.poetry]
name = "adopet"
version = "0.1.0"
description = ""
authors = ["derek.coelho <derek.coelho.ext@vr.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.10.3"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
aio-pika = "^9.0.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.9"}
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
asyncpg = "^0.27.0"
requests = "^2.28.2"
sqlalchemy-utils = "^0.41.0"
phonenumbers = "^8.13.10"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
